--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -1,30 +1,31 @@
 [package]
-name = "zecwallet-lite"
+name = "zingo-wrapper"
 version = "0.1.0"
+authors = ["James Katz"]
+license = "ISC"
 edition = "2018"
-authors = ["Zecwallet"]
-license = "MIT/Apache-2.0"
+exclude = ["index.node"]
 
 [lib]
 crate-type = ["cdylib"]
 
-
-[dependencies.neon]
-version = "0.8"
-default-features = false
-features = ["napi-6"]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zecwalletlitelib = { git = "https://github.com/adityapk00/zecwallet-light-cli", rev = "fd5d11f0f28e0f1628ea8fdad0cce16d50e6bb98" }
-#zecwalletlitelib = { path = "../../zecwallet-light-cli/lib" }
+# zingolib = { path = "../../zingolib/zingolib" }
+# zingoconfig = { path = "../../zingolib/zingoconfig" }
+
+zingolib = { git = "https://github.com/zingolabs/zingolib", branch = "dev" }
+zingoconfig = { git = "https://github.com/zingolabs/zingolib", branch = "dev" }
+
 lazy_static = "1.4.0"
 
-
 [patch.crates-io]
-zcash_address = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
-zcash_primitives = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
-zcash_client_backend = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
-zcash_note_encryption = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
-zcash_encoding = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
-zcash_proofs = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
-orchard = { git = "https://github.com/adityapk00/orchard", rev = "0a960a380f4e9c3472c9260f3df61cd5e50d51b0" }
+zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", rev = "d66f7f70516e6da5c24008874a926d41221b1346" }
+zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "d66f7f70516e6da5c24008874a926d41221b1346" }
+orchard = { git = "https://github.com/zingolabs/orchard", rev = "49874b31da4fedcb31fcfadf5ba8804bf860c4bf" }
+
+[dependencies.neon]
+version = "0.10"
+default-features = false
+features = ["napi-6"]
