--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -12,11 +12,12 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zingolib = { path = "../../zingolib/zingolib" }
-zingoconfig = { path = "../../zingolib/zingoconfig" }
+zingolib = { git="https://github.com/ZingoLabs/zingolib", default-features=false, branch = "dev" }
+zingoconfig = { git="https://github.com/zingolabs/zingolib", default-features=false, branch = "dev" }
 lazy_static = "1.4.0"
 
 [patch.crates-io]
+bellman = { git = "https://github.com/zingolabs/bellman", rev="c852464b1743d10072ab0521fba939f79da6798e" }
 zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", rev = "d66f7f70516e6da5c24008874a926d41221b1346" }
 zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "d66f7f70516e6da5c24008874a926d41221b1346" }
 orchard = { git = "https://github.com/zingolabs/orchard", rev = "49874b31da4fedcb31fcfadf5ba8804bf860c4bf" }
