--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Zecwallet Lite",
-  "name": "Zecwallet Lite",
+  "short_name": "Zingo PC",
+  "name": "Zingo PC",
   "icons": [
     {
       "src": "favicon.ico",
