--- a/package.json
+++ b/package.json
@@ -11,66 +11,26 @@
     "url": "https://github.com/zingolabs/zingo-pc"
   },
   "dependencies": {
-    "@babel/core": "7.12.3",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@svgr/webpack": "5.5.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^14.18.21",
-    "@types/react": "^17.0.45",
-    "@types/react-dom": "^17.0.17",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "camelcase": "^6.3.0",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "cross-env": "^7.0.3",
     "css-loader": "4.3.0",
     "dateformat": "^4.6.3",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "electron-build-env": "^0.2.0",
     "electron-is-dev": "^1.2.0",
     "electron-notarize": "^1.2.1",
     "electron-settings": "^4.0.2",
-    "eslint": "^7.32.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.10.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^24.7.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-testing-library": "^3.9.2",
-    "eslint-webpack-plugin": "^2.6.0",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "4.5.0",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-resolve": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
     "js-base64": "^3.7.2",
-    "mini-css-extract-plugin": "0.11.3",
+    "loader-utils": "^3.2.1",
     "neon-cli": "^0.8.3",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
-    "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "progress-stream": "^2.0.0",
-    "prompts": "2.4.0",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-accessible-accordion": "^3.3.5",
@@ -86,22 +46,16 @@
     "request": "^2.88.2",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^10.2.1",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
-    "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
-    "typeface-roboto": "^1.1.13",
-    "typescript": "^4.7.3",
+    "typescript": "^4.9.5",
     "url-loader": "4.1.1",
     "url-parse": "^1.5.10",
-    "web-vitals": "^1.0.1",
-    "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.1",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "start": "concurrently -k \"cross-env NODE_ENV=production BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electronmon .\"",
     "build": "yarn neon && node scripts/build.js",
     "test": "yarn neon && node scripts/test.js",
@@ -135,10 +89,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^11.1.0",
     "@types/dateformat": "^3.0.1",
     "@types/js-base64": "^3.3.1",
+    "@types/node": "^14.18.21",
     "@types/progress-stream": "^2.0.2",
     "@types/qrcode.react": "^1.0.2",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/react-modal": "^3.13.1",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
@@ -146,14 +107,43 @@
     "@types/react-textarea-autosize": "^4.3.6",
     "@types/request": "^2.48.8",
     "@types/url-parse": "^1.4.8",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.0",
+    "babel-loader": "8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
     "cargo-cp-artifact": "^0.1.7",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "concurrently": "^5.3.0",
+    "depcheck": "^1.4.3",
     "electron": "^13.6.8",
     "electron-builder": "^22.14.13",
     "electron-devtools-installer": "^3.1.1",
     "electronmon": "^1.1.2",
-    "husky": "^6.0.0",
-    "wait-on": "^5.2.1"
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.10.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-testing-library": "^3.9.2",
+    "eslint-webpack-plugin": "^2.6.0",
+    "html-webpack-plugin": "4.5.0",
+    "jest": "26.6.0",
+    "jest-circus": "26.6.0",
+    "jest-watch-typeahead": "0.6.1",
+    "mini-css-extract-plugin": "0.11.3",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "pnp-webpack-plugin": "1.6.4",
+    "terser-webpack-plugin": "4.2.3",
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.1",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "5.1.4"
   },
   "homepage": "./",
   "main": "./public/electron.js",
