--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     ]
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.0",
     "@types/dateformat": "^3.0.1",
     "@types/js-base64": "^3.3.1",
     "@types/progress-stream": "^2.0.2",
