Fix: Lightwalletd http `unsupportdversion` error fixed

--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -14,11 +14,12 @@ crate-type = ["cdylib"]
 [dependencies]
 zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "dev" }
 zingoconfig = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "dev" }
+http = "*"
 lazy_static = "1.4.0"
 
 [patch.crates-io]
-zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", rev = "52e4d0c834ff697cae23dad43e580a85658b7764" }
-zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "52e4d0c834ff697cae23dad43e580a85658b7764" }
+zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", rev = "acfdabc3629c93517e3c4742848996c595de6d3c" }
+zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "acfdabc3629c93517e3c4742848996c595de6d3c" }
 
 [dependencies.neon]
 version = "0.10"
