--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.196",
     "@types/node": "^14.18.21",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
@@ -63,6 +64,7 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "js-base64": "^3.7.2",
+    "lodash": "4.17.21",
     "mini-css-extract-plugin": "0.11.3",
     "neon-cli": "^0.8.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
