--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
     "cargo-cp-artifact": "^0.1.7",
     "concurrently": "^5.3.0",
     "electron": "^13.6.8",
-    "electron-builder": "^22.14.13",
+    "electron-builder": "^24.6.3",
     "electron-devtools-installer": "^3.1.1",
     "electronmon": "^1.1.2",
     "husky": "^6.0.0",
@@ -179,6 +179,7 @@
       "category": "public.app-category.productivity",
       "type": "distribution",
       "hardenedRuntime": true,
+      "gatekeeperAssess": false,
       "entitlements": "./configs/entitlements.mac.inherit.plist",
       "target": [
         "dmg"
