--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/deep-diff": "^1.0.2",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.196",
     "@types/node": "^14.18.21",
@@ -39,6 +40,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "4.3.0",
     "dateformat": "^4.6.3",
+    "deep-diff": "^1.0.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "electron-build-env": "^0.2.0",
