--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -20,4 +20,4 @@ lazy_static = "1.4.0"
 [dependencies.neon]
 version = "0.10"
 default-features = false
-features = ["napi-6"]
+features = ["napi-6", "promise-api", "channel-api"]
