fix: async await adjustments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
     "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
