--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -21,3 +21,7 @@ lazy_static = "1.4.0"
 version = "0.10"
 default-features = false
 features = ["napi-6", "promise-api", "channel-api"]
+
+[patch.crates-io]
+incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "bae25ad89c0c192bee625252d2d419bd56638e48" }
+shardtree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "bae25ad89c0c192bee625252d2d419bd56638e48" }
