--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zingo-pc",
   "productName": "Zingo PC",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "description": "Zingo PC",
   "license": "MIT",
@@ -117,7 +117,7 @@
     "build-win-x64": "yarn neon-win-x64 && node scripts/build.js",
     "build-win-arm64": "yarn neon-win-arm64 && node scripts/build.js",
     "test": "yarn neon && node scripts/test.js",
-    "dist:linux": "yarn build && electron-builder -l --universal -c.extraMetadata.main=build/electron.js --publish never",
+    "dist:linux": "yarn build && electron-builder -l -c.extraMetadata.main=build/electron.js --publish never",
     "dist:mac-arm64": "yarn build-mac-arm64 && electron-builder -m --arm64 -c.extraMetadata.main=build/electron.js --publish never",
     "dist:mac-x64": "yarn build-mac-x64 && electron-builder -m --x64 -c.extraMetadata.main=build/electron.js --publish never",
     "dist:win-arm64": "yarn build-win-arm64 && electron-builder -w --arm64 -c.extraMetadata.main=build/electron.js --publish never",
