--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.22.5",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -30,6 +32,7 @@
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.196",
     "@types/node": "^14.18.21",
+    "@types/randomcolor": "^0.5.7",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -42,6 +45,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.3.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chart.js": "^4.3.0",
     "cross-env": "^7.0.3",
     "css-loader": "4.3.0",
     "dateformat": "^4.6.3",
@@ -84,9 +88,11 @@
     "progress-stream": "^2.0.0",
     "prompts": "2.4.0",
     "qrcode.react": "^3.1.0",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-accessible-accordion": "^3.3.5",
     "react-app-polyfill": "^2.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
     "react-modal": "^3.15.1",
