fix: first chart working

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.3.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "chart.js": "^4.3.0",
+    "chart.js": "3.9.1",
     "cross-env": "^7.0.3",
     "css-loader": "4.3.0",
     "dateformat": "^4.6.3",
@@ -92,7 +92,7 @@
     "react": "^17.0.2",
     "react-accessible-accordion": "^3.3.5",
     "react-app-polyfill": "^2.0.0",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "4.3.1",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
     "react-modal": "^3.15.1",
@@ -123,6 +123,7 @@
     "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "start": "concurrently -k \"cross-env NODE_ENV=production BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electronmon .\"",
     "build": "yarn clean && yarn neon && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
+    "script:build": "cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
     "clean": "cd native && cargo clean && cd ..",
     "update": "cd native && cargo clean && cargo update && cd ..",
     "build-mac-x64": "yarn clean && yarn neon-mac-x64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
