--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/randomcolor": "^0.5.7",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
+    "@types/react-svg": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
