fix: rust code refactored & value transfers migration

--- a/package.json
+++ b/package.json
@@ -125,14 +125,14 @@
   "scripts": {
     "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "start": "concurrently -k \"cross-env NODE_ENV=production BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electronmon .\"",
-    "build": "yarn clean && yarn neon && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
     "script:build": "cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
-    "clean": "cd native && cargo clean && cd ..",
-    "update": "cd native && cargo clean && cargo update && cd ..",
-    "build-mac-x64": "yarn clean && yarn neon-mac-x64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
-    "build-mac-arm64": "yarn clean && yarn neon-mac-arm64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
-    "build-win-x64": "yarn clean && yarn neon-win-x64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
-    "build-win-arm64": "yarn clean && yarn neon-win-arm64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
+    "cargo:clean": "cd native && cargo clean && cd ..",
+    "cargo:update": "cd native && cargo update && cd ..",
+    "build": "yarn cargo:clean && yarn neon && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
+    "build-mac-x64": "yarn cargo:clean && yarn neon-mac-x64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
+    "build-mac-arm64": "yarn cargo:clean && yarn neon-mac-arm64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
+    "build-win-x64": "yarn cargo:clean && yarn neon-win-x64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
+    "build-win-arm64": "yarn cargo:clean && yarn neon-win-arm64 && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
     "test": "yarn neon && cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/test.js",
     "dist:linux": "rimraf dist && yarn build && electron-builder -l -c.extraMetadata.main=build/electron.js --publish never",
     "dist:mac-arm64": "rimraf dist && yarn build-mac-arm64 && electron-builder -m --arm64 -c.extraMetadata.main=build/electron.js --publish never",
@@ -183,7 +183,7 @@
     "@types/react-textarea-autosize": "^4.3.6",
     "@types/request": "^2.48.8",
     "@types/url-parse": "^1.4.8",
-    "cargo-cp-artifact": "^0.1.7",
+    "cargo-cp-artifact": "^0.1.9",
     "concurrently": "^5.3.0",
     "electron": "^13.6.8",
     "electron-builder": "^24.6.3",
