--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -12,12 +12,13 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "stable" }
-zingoconfig = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "stable" }
-http = "*"
+zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, tag = "mob-release-1.4.3" }
+zingoconfig = { git="https://github.com/zingolabs/zingolib", default-features=true, tag = "mob-release-1.4.3" }
+http = "0.2.4"
 lazy_static = "1.4.0"
+tokio =  { version = "1.24", features = [ "full" ] }
 
 [dependencies.neon]
-version = "0.10"
+version = "0.10.1"
 default-features = false
 features = ["napi-6", "promise-api", "channel-api"]
