--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -12,9 +12,8 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, tag = "mob-release-1.4.3" }
-zingoconfig = { git="https://github.com/zingolabs/zingolib", default-features=true, tag = "mob-release-1.4.3" }
-http = "0.2.4"
+zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "dev", features=["test-elevation"] }
+http = "1.1.0"
 lazy_static = "1.4.0"
 tokio =  { version = "1.24", features = [ "full" ] }
 
@@ -22,6 +21,3 @@ tokio =  { version = "1.24", features = [ "full" ] }
 version = "0.10.1"
 default-features = false
 features = ["napi-6", "promise-api", "channel-api"]
-
-[patch.crates-io]
-hdwallet = { git = "https://github.com/juanky201271/hdwallet", rev = "13d36401100671e57a9a9b19942c77e06d3b0507" }
